# SIMPLView

./: .clang-format-ignore  CMakeLists.txt  CompilingVtk.md  ReadMe-SIMPLView.md  azure-pipelines.yml
License/: License.cmake
Resources/: SIMPLView.qrc  ThirdParty.qrc
Resources/CPack/: PackageProject.cmake
Resources/OpenSourceEdition/: BrandedStrings.h  branded_files.qrc
Resources/OpenSourceEdition/splash/: branded_splash.psd
Source/Applications/Common/: SIMPLViewUserManualDialog.cpp  SIMPLViewUserManualDialog.h  SourceList.cmake
Source/Applications/DevHelper/: AddFilterParameter.cpp  AddFilterParameter.h  AddFilterWidget.cpp  AddFilterWidget.h  CMakeLists.txt  DevHelper.cpp  DevHelper.h  FilterBundler.cpp  FilterBundler.h  FilterMaker.cpp  FilterMaker.h  HelpWidget.cpp  HelpWidget.h  PMDirGenerator.cpp  PMDirGenerator.h  PMFileGenerator.cpp  PMFileGenerator.h  PMGeneratorTreeItem.h  PluginMaker.cpp  PluginMaker.h  main.cpp
Source/Applications/SIMPLView/: AboutPlugins.cpp  AboutPlugins.h  AboutSIMPLView.cpp  AboutSIMPLView.h  CMakeLists.txt  DSplashScreen.h  (+20 more)
Source/Common/: SIMPLViewUserManualDialog.cpp  SIMPLViewUserManualDialog.h  SourceList.cmake
Source/DevHelper/: AddFilterParameter.cpp  AddFilterParameter.h  AddFilterWidget.cpp  AddFilterWidget.h  CMakeLists.txt  DevHelper.cpp  DevHelper.h  FilterBundler.cpp  FilterBundler.h  FilterMaker.cpp  FilterMaker.h  HelpWidget.cpp  HelpWidget.h  PMDirGenerator.cpp  PMDirGenerator.h  PMFileGenerator.cpp  PMFileGenerator.h  PMGeneratorTreeItem.h  PluginMaker.cpp  PluginMaker.h  main.cpp
Source/QtSupportLib/: AIMImageGraphicsDelegate.cpp  AIMImageGraphicsDelegate.h  ApplicationAboutBoxDialog.cpp  ApplicationAboutBoxDialog.h  ApplicationFileInfo.cpp  ApplicationFileInfo.h  BookmarkMissingDialog.cpp  BookmarkMissingDialog.h  CMakeLists.txt  ColorComboPicker.cpp  ColorComboPicker.h  DistributionTypeWidget.cpp  DistributionTypeWidget.h  FaderWidget.h  FavoritesChangedDialog.h  FileDragMessageBox.cpp  FileDragMessageBox.h  HelpDialog.cpp  HelpDialog.h  HoverButton.cpp  HoverButton.h  QCheckboxDialog.cpp  QCheckboxDialog.h  QDroppableScrollArea.cpp  QDroppableScrollArea.h  QFSDropLabel.cpp  QFSDropLabel.h  QFSDropLineEdit.cpp  QFSDropLineEdit.h  QFileCompleter.cpp  QFileCompleter.h  QRecentFileList.cpp  QRecentFileList.h  QtSupportLibDLLExport.h  SIMPLPluginFrame.cpp  SIMPLPluginFrame.h  SIMPLQtMacros.h  SIMPLViewGraphicsView.cpp  SIMPLViewGraphicsView.h  SIMPLViewHelpUrlGenerator.cpp  (+11 more)
Source/SIMPLView/: AboutSIMPLView.cpp  AboutSIMPLView.h  CMakeLists.txt  MacSIMPLViewApplication.cpp  MacSIMPLViewApplication.h  PythonImportErrorDialog.cpp  PythonImportErrorDialog.h  SIMPLView.h.in  SIMPLViewApplication.cpp  SIMPLViewApplication.h  SIMPLViewConstants.h  SIMPLViewUIMessageHandler.cpp  SIMPLViewUIMessageHandler.h  SIMPLView_UI.cpp  SIMPLView_UI.h  StandardSIMPLViewApplication.cpp  StandardSIMPLViewApplication.h  StatusBarButton.cpp  StatusBarButton.h  StatusBarWidget.cpp  StatusBarWidget.h  StyleSheetEditor.cpp  StyleSheetEditor.h  main.cpp
Source/SIMPLViewWidgetsLib/: CMakeLists.txt  DynamicTableData.h  FilterWidgetManager.cpp  FilterWidgetManager.h  IFilterWidgetFactory.h  PipelineFilterWidgetFactory.hpp  PipelineViewPtrMimeData.h  SIMPLViewWidgetsLibConfiguration.h.in  SIMPLViewWidgetsLibConstants.h  SIMPLViewWidgetsLibDLLExport.h  UpdateCheck.cpp  UpdateCheck.h  UpdateCheckData.h
Source/SIMPLViewWidgetsLib/FilterParameterWidgets/: AttributeMatrixCreationWidget.cpp  AttributeMatrixCreationWidget.h  AttributeMatrixSelectionWidget.cpp  AttributeMatrixSelectionWidget.h  AxisAngleWidget.cpp  AxisAngleWidget.h  BooleanWidget.cpp  BooleanWidget.h  CalculatorWidget.cpp  CalculatorWidget.h  ChoiceWidget.cpp  ChoiceWidget.h  ComparisonSelectionItemDelegate.cpp  ComparisonSelectionItemDelegate.h  ComparisonSelectionTableModel.cpp  ComparisonSelectionTableModel.h  ComparisonSelectionWidget.cpp  ComparisonSelectionWidget.h  CustomWidget.h  DataArrayCreationWidget.cpp  DataArrayCreationWidget.h  DataArrayInformationDisplayWidget.cpp  DataArrayInformationDisplayWidget.h  DataArraySelectionWidget.cpp  DataArraySelectionWidget.h  DataBundleSelectionWidget.cpp  DataBundleSelectionWidget.h  DataContainerArrayProxyWidget.cpp  DataContainerArrayProxyWidget.h  DataContainerCreationWidget.cpp  DataContainerCreationWidget.h  DataContainerReaderWidget.cpp  DataContainerReaderWidget.h  DataContainerSelectionWidget.cpp  DataContainerSelectionWidget.h  DoubleWidget.cpp  DoubleWidget.h  DynamicChoiceWidget.cpp  DynamicChoiceWidget.h  DynamicTableItemDelegate.h  (+46 more)
Source/SIMPLViewWidgetsLib/FilterParameterWidgets/UI_Files/: CalculatorWidget.ui
Source/SIMPLViewWidgetsLib/Widgets/: AboutPlugins.h  BookmarksItem.h  BookmarksItemDelegate.cpp  BookmarksItemDelegate.h  BookmarksModel.cpp  BookmarksModel.h  BookmarksToolboxWidget.cpp  BookmarksToolboxWidget.h  BookmarksTreeView.cpp  BookmarksTreeView.h  BreakpointFilterWidget.cpp  BreakpointFilterWidget.h  DREAM3DListWidget.h  DSplashScreen.h  DataContainerArrayWidget.cpp  DataContainerArrayWidget.h  DropBoxWidget.cpp  DropBoxWidget.h  FilterInputWidget.cpp  FilterInputWidget.h  FilterLibraryToolboxWidget.cpp  FilterLibraryToolboxWidget.h  FilterLibraryTreeWidget.cpp  FilterLibraryTreeWidget.h  FilterListToolboxWidget.cpp  FilterListToolboxWidget.h  FilterListWidget.cpp  FilterListWidget.h  IssuesDockWidget.cpp  IssuesDockWidget.h  PipelineFilterWidget.cpp  PipelineFilterWidget.h  PipelineViewEntry.h  PipelineViewWidget.cpp  PipelineViewWidget.h  SIMPLViewUpdateCheckDialog.cpp  SIMPLViewUpdateCheckDialog.h  SourceList.cmake  StandardOutputDockWidget.cpp  StandardOutputDockWidget.h
Source/SIMPLViewWidgetsLib/Widgets/UI_Files/: FilterInputWidget.ui  PipelineFilterWidget.ui  SIMPLViewUpdateCheckDialog.ui
Source/SIMPLViewWidgetsLib/Widgets/util/: AddFiltersCommand.cpp  AddFiltersCommand.h  ClearFiltersCommand.cpp  CutCommand.cpp  MoveFilterCommand.cpp  RemoveFilterCommand.cpp  RemoveFilterCommand.h
Source/SVWidgetsLib/: CMakeLists.txt
Test/: CMakeLists.txt  MemoryLeakTest.cpp
Tools/: CMakeLists.txt
(+373 files in other folders)
